Fixed issue: email/phone input overflows when screen is at Ipad size (768x1024)

--- a/public/css/account/forgot-password.css
+++ b/public/css/account/forgot-password.css
@@ -71,7 +71,7 @@
 
 
 /* Responsive forgot password */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 850px) {
     #email-phone-input {
         width: 70%
     }
